Try to prevent overflow again

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -302,6 +302,7 @@ button:active, button:focus {
 iframe {
   display: block;
   width: 336px;
+  max-width: 336px;
   height: 280px;
   opacity: 1;
   margin: auto;
